--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,25 @@
 {
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
   "env": {
     "commonjs": true,
     "es6": true,
     "node": true,
     "jest": true
   },
-  "extends": ["airbnb-base", "prettier", "plugin:node/recommended"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
+  "extends": [
+    "airbnb-base",
+    "plugin:prettier/recommended",
+    "plugin:jest/recommended",
+    "plugin:jest/style",
+    "plugin:jest-formatting/recommended"
+  ],
+  "plugins": ["prettier", "jest", "jest-formatting"],
   "parserOptions": {
     "ecmaVersion": 2018
   },
-  "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error",
     "no-unused-vars": "warn",
@@ -21,6 +27,9 @@
     "func-names": "off",
     "no-plusplus": "off",
     "no-process-exit": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "no-restricted-syntax": ["error", "FunctionExpression", "WithStatement", "BinaryExpression[operator='in']"],
+    "camelcase": "error",
+    "quotes": ["error", "single", { "avoidEscape": true }]
   }
 }
