--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "tabWidth": 2,
+  "useTabs": false,
+  "printWidth": 140,
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
