--- a/package.json
+++ b/package.json
@@ -6,16 +6,34 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "prepare": "husky install",
+    "eslint:fix": "eslint --cache --fix .",
+    "eslint:verify": "eslint .",
+    "prettier:fix": "prettier --write .",
+    "prettier:verify": "prettier --check ."
+  },
+  "lint-staged": {
+    "*.js": "npm run eslint:fix",
+    "*.{js,css,md,yml,json,code-snippets}": "npm run prettier:fix"
   },
   "devDependencies": {
-    "eslint": "^8.31.0",
+    "@types/eslint": "^8.40.0",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/prettier": "^2.7.2",
+    "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.3.1",
-    "prettier": "^2.8.1"
+    "eslint-plugin-yml": "^1.7.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8"
   }
 }
