--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "*.{js,css,md,yml,json,code-snippets}": "npm run prettier:fix"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@types/eslint": "^8.40.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/jest": "^29.5.1",
     "@types/prettier": "^2.7.2",
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -34,6 +37,7 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "snyk": "^1.1168.0"
   }
 }
