--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^29.5.1",
     "@types/prettier": "^2.7.2",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-node": "^4.1.0",
@@ -38,6 +39,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "snyk": "^1.1168.0"
+    "snyk": "^1.1168.0",
+    "sonarqube-scanner": "^3.0.1"
   }
 }
